--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">ACIL CARS</string>
+    <string name="app_name">Showroom</string>
+    <string name="home">Home</string>
+    <string name="pengelolaan_mobil">Pengelolaan Mobil</string>
+    <string name="setting">Setting</string>
 </resources>
