--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">Showroom</string>
-    <string name="home">Home</string>
+    <string name="app_name">Showroom KDRT</string>
+    <string name="pengelolaan_motor">Pengelolaan Motor</string>
     <string name="pengelolaan_mobil">Pengelolaan Mobil</string>
-    <string name="setting">Setting</string>
+    <string name="pengelolaan_promo">Pengelolaan Promo</string>
 </resources>
