--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Showroom KDRT</string>
+    <string name="app_name">Showroom DUDAKSIL</string>
     <string name="pengelolaan_motor">Pengelolaan Motor</string>
     <string name="pengelolaan_mobil">Pengelolaan Mobil</string>
     <string name="pengelolaan_promo">Pengelolaan Promo</string>
